# synapticTrack

./: .gitattributes  .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py  setup.sh
.github/workflows/: ci.yml
docs/: Makefile  conf.py  index.rst  synaptictrack.tree
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
examples/: demo_run.py  phasespace_plot.ipynb  scanner.ipynb  twiss_parameters.ipynb
examples/analysis/: scanner.ipynb  twiss_parameters.ipynb
examples/beam/: beam.ipynb
examples/calibrations/: .gitignore  0.track_create_lattice.ipynb  1.track_experiment_steering_data.ipynb  2.track_test_load_lattice.ipynb  3.track_callibrate_experiment_data.ipynb  4.track_check_calibrations.ipynb  5.track_run_simulations.ipynb  6.track_scanner_centroid.ipynb  Graph.cfg  calibrations.py  scratch.#02  utils.py
examples/calibrations/lattice/: elements0.json  elements1.json  elements2.json  elements3.json  elements4.json  elements5.json
examples/data/input_beam/: coord.out
examples/jutrack/: beam.jl  jubeam.json  jutrack_integration.ipynb  lebt.jl  lebt_sc.jl  sclinac.jl  track.jl  track_sc.jl
examples/track/: track_input_data.ipynb
examples/visualization/: phasespace_plot.ipynb
src/synapticTrack/: __init__.py  cli.py  pipeline.py
src/synapticTrack/analysis/: scanner_analysis.py
src/synapticTrack/beam/: __init__.py  beam.py  beam_data_io.py  beam_scanner.py  twiss.py
src/synapticTrack/io/: __init__.py  beam_data_io_manager.py  flame_io.py  jutrack_io.py  opal_io.py  scanner_io.py  track_io.py
src/synapticTrack/lattice/: __init__.py  convert_bmag.py  convert_equad.py  lattice_json_schema_validator.py  synaptictrack_lattice.schema.json  track_elements.py  track_lattice.py
src/synapticTrack/track/: __init__.py  run_track.py
src/synapticTrack/utils/: __init__.py
src/synaptictrack/: __init__.py  cli.py  pipeline.py
tests/: conftest.py  run_alltests.py  test_beam.py  test_beam_data_io_manager.py  test_io.py  test_jutrack_integration.py  test_lattice.py  test_scanner.py  test_visualization.py
(+34 files in other folders)
