[build-system]
requires = ["setuptools>=64", "wheel", "setuptools_scm[toml]>=7"]
build-backend = "setuptools.build_meta"

[project]
name = "synapticTrack"
version = "0.1.0"
description = "Heavy Ion Linac Orbit Correction & Beam Dynamics Framework with ML"
authors = [{ name = "Chong Shik Park", email = "kuphy@korea.ac.kr" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "torch >=2.9.1",
    "gymnasium >=1.2.2",
    "numpy >=1.20",
    "scipy >=1.7",
    "matplotlib >=3.4",
    "pandas >=1.3",
    "tqdm >=4.62",
    "h5py >=3.0",
    "pymongo >=4.0",
    "typer[all] >=0.9",
    "scikit-learn >=1.0",
    "periodictable >=2.0",
    "pytest >=8.0"
]

#[project.urls]
#Homepage = "https://github.com/your-org/synapticTrack"
#Documentation = "https://github.com/your-org/synapticTrack/docs"
#Source = "https://github.com/your-org/synapticTrack"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["synapticTrack*"]

[project.scripts]
synapticTrack = "synapticTrack.cli:app"

